--- a/chatterbox/index.html
+++ b/chatterbox/index.html
@@ -5,7 +5,7 @@
     <link rel="icon"
           href="/vite.svg" />
           
-    <meta name="viewport" content="width=devicse-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatterBox</title>
   </head>
   <body>
